--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>
-		{% block title %}Haras du Val de Loire
+		{% block title %}
+			Haras du Val de Loire
 		{% endblock %}
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -19,8 +20,8 @@
 		{% include 'Includes/_navbar.html.twig' %}
 	{% endblock %}
 	{% block content %}{% endblock %}
-	{% block btnUp %}
-		{% include "Includes/_btnToGoUp.html.twig" %}
+	{% block button %}
+		{% include "Includes/_button_to_go_up.html.twig" %}
 	{% endblock %}
 	{% block javascript %}{% endblock %}
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
