--- a/src/View/User/Includes/_welcome_background_slideshow.html.twig
+++ b/src/View/User/Includes/_welcome_background_slideshow.html.twig
@@ -1,21 +1,20 @@
 <div class="slider">
-        <div class="load">
-        </div>
-        <div class="content">
-            <div class="principal">
-                <h1>lorem ipsum</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                <div class="card border-0">
+    <div class="load"></div>
+    <div class="content">
+        <div class="principal">
+            <h1>lorem ipsum</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <div class="card border-0">
                 <div class="card-body">
-                <h2 class="card-title">Lorem ipsum</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rutrum lectus sed velit fermentum sollicitudin. Nulla molestie metus eget.</p>
+                    <h2 class="card-title">Lorem ipsum</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rutrum lectus sed velit fermentum sollicitudin. Nulla molestie metus eget.</p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item border-0">Lorem ipsum dolor.</li>
                     <li class="list-group-item border-0">Lorem ipsum dolor sit.</li>
                     <li class="list-group-item border-0">Lorem ipsum dolor.</li>
                 </ul>
-                </div>
             </div>
         </div>
     </div>
+</div>
