--- a/src/View/User/haras.html.twig
+++ b/src/View/User/haras.html.twig
@@ -3,5 +3,6 @@
     <link rel="stylesheet" href="/assets/css/haras.css">
 {% endblock %}
 {% block content %}
+    {% include "User/Includes/_haras_grey_block.html.twig" %}
     {% include "User/Includes/_haras_googlemap.html.twig" %}
 {% endblock %}
