use block empty for the moment

--- a/src/View/User/welcome.html.twig
+++ b/src/View/User/welcome.html.twig
@@ -5,3 +5,4 @@
 {% block content %}
     {% include 'User/Includes/_welcome_background_slideshow.html.twig' %}
 {% endblock %}
+{% block button %}{% endblock %}
