--- a/src/View/User/course.html.twig
+++ b/src/View/User/course.html.twig
@@ -3,5 +3,6 @@
     <link rel="stylesheet" href="/assets/css/course.css">
 {% endblock %}
 {% block content %}
+    {% include "User/Includes/_course_white_block.html.twig" %}
     {% include "User/Includes/_course_tab.html.twig" %}
 {% endblock %}
