--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'layout.html.twig' %}
-
+{% block stylesheet %}
+    <link rel="stylesheet" href= "/assets/css/welcome.css">
+{% endblock %}
 {% block content %}
-    <h1>Haras Poney</h1>
+    {% include 'User/Includes/_welcome_background_slideshow.html.twig' %}
 {% endblock %}
