--- a/src/View/User/Includes/_stage_grey_block.html.twig
+++ b/src/View/User/Includes/_stage_grey_block.html.twig
@@ -1,26 +1,26 @@
 {% block stage_grey_block %}
     <div class="grey-block-content col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
-        <div class="stage-grey-block-title-text">
-            <h2 class="stage-grey-block-title">
+        <div class="grey-block">
+            <h2 class="grey-block-title">
                 CONDITIONS
             </h2>
-            <p class="stage-grey-block-text">
+            <p class="grey-block-text">
                 Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
             </p>
         </div>
-        <div class="stage-grey-block-title-text">
-            <h2 class="stage-grey-block-title">
+        <div class="grey-block">
+            <h2 class="grey-block-title">
                 INSCRIPTION
             </h2>
-            <p class="stage-grey-block-text">
+            <p class="grey-block-text">
                 Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
             </p>
         </div>
-        <div class="stage-grey-block-title-text">
-            <h2 class="stage-grey-block-title">
+        <div class="grey-block">
+            <h2 class="grey-block-title">
                 DETAILS
             </h2>
-            <p class="stage-grey-block-text">
+            <p class="grey-block-text">
                 Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
             </p> 
         </div>    
