--- a/src/View/User/Includes/_stage_grey_block.html.twig
+++ b/src/View/User/Includes/_stage_grey_block.html.twig
@@ -24,8 +24,8 @@
                 Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
             </p> 
         </div>    
-        <div class="button-insc">
-            <button class="button-inscription" type="button">
+        <div class="button-inscription">
+            <button class="inscription" type="button">
                 JE M'INSCRIS !
             </button>
         </div>
