--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -7,8 +7,8 @@
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
 				<a class="btn-nav" href="/Admin/course">Cours</a>
-				<a class="btn-nav" href="">Stage</a>
-				<a class="btn-nav" href="">Client</a>
+				<a class="btn-nav" href="">Stages</a>
+				<a class="btn-nav" href="">Clients</a>
 			</div>
 		</div>
 	</div>
