--- a/src/View/Includes/_navbar.html.twig
+++ b/src/View/Includes/_navbar.html.twig
@@ -6,10 +6,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="btn-nav" href="/haras/haras">Accueil</a>
-                <a class="btn-nav" href="/course/course">Cours</a>
-                <a class="btn-nav" href="/stage/stage">Stages</a>
-                <a class="btn-nav" href="">Contact</a>
+                <a class="button-navbar" href="/haras/haras">Accueil</a>
+                <a class="button-navbar" href="/course/course">Cours</a>
+                <a class="button-navbar" href="/stage/stage">Stages</a>
+                <a class="button-navbar" href="/contact/contact">Contact</a>
             </div>
         </div>
     </div>
