--- a/src/View/User/stage.html.twig
+++ b/src/View/User/stage.html.twig
@@ -3,5 +3,6 @@
     <link rel="stylesheet" href="/assets/css/stage.css">
 {% endblock %}
 {% block content %}
+    {% include "User/Includes/_stage_white_block.html.twig" %}
     {% include "User/Includes/_stage_grey_block.html.twig" %}
 {% endblock %}
