--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -6,9 +6,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="btn-nav" href="/Admin/course">Cours</a>
-				<a class="btn-nav" href="">Stages</a>
-				<a class="btn-nav" href="">Clients</a>
+				<a class="button-navbar" href="/Admin/course">Cours</a>
+				<a class="button-navbar" href="">Stages</a>
+				<a class="button-navbar" href="">Clients</a>
 			</div>
 		</div>
 	</div>
