--- a/src/View/User/haras.html.twig
+++ b/src/View/User/haras.html.twig
@@ -1,8 +1,8 @@
 {% extends 'layout.html.twig' %}
 {% block stylesheet %}
-    <link rel="stylesheet" href="/assets/css/haras.css">
+    <link rel='stylesheet' href='/assets/css/haras.css'>
 {% endblock %}
 {% block content %}
     {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'ACCUEIL'} %}
-    {% include "User/Includes/_haras_googlemap.html.twig" %}
+    {% include 'User/Includes/_haras_googlemap.html.twig' %}
 {% endblock %}
