add white text in contact page

--- a/src/View/User/contact.html.twig
+++ b/src/View/User/contact.html.twig
@@ -4,4 +4,5 @@
 {% endblock %}
 {% block content %}
     {% include "User/Includes/_contact_googlemap.html.twig" %}
+    {% include "User/Includes/_contact_white_block.html.twig" %}
 {% endblock %}
