changed double quote into simple quote

--- a/src/View/User/contact.html.twig
+++ b/src/View/User/contact.html.twig
@@ -3,6 +3,6 @@
     <link rel="stylesheet" href="/assets/css/contact.css">
 {% endblock %}
 {% block content %}
-    {% include "User/Includes/_contact_googlemap.html.twig" %}
-    {% include "User/Includes/_contact_white_block.html.twig" %}
+    {% include 'User/Includes/_contact_googlemap.html.twig' %}
+    {% include 'User/Includes/_contact_white_block.html.twig' %}
 {% endblock %}
