--- a/src/View/User/Includes/_welcome_background_slideshow.html.twig
+++ b/src/View/User/Includes/_welcome_background_slideshow.html.twig
@@ -1,7 +1,7 @@
 <div class="slider">
     <div class="load"></div>
     <div class="content">
-        <div class="principal">
+        <div class="principal col-12">
             <h1>lorem ipsum</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             <div class="card border-0">
