--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,8 +1,9 @@
 {% extends 'layout.html.twig' %}
 {% block stylesheet %}
-    <link rel="stylesheet" href= "/assets/css/welcome.css">
+    <link rel="stylesheet" href="/assets/css/welcome.css">
 {% endblock %}
 {% block content %}
     {% include 'User/Includes/_welcome_background_slideshow.html.twig' %}
 {% endblock %}
 {% block button %}{% endblock %}
+{% block footer %}{% endblock %}
