--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -53,7 +53,7 @@
 }
 
 @media screen and (max-width: 575px) {
-    .nav .btn-nav {
+    .nav .button-navbar {
         --spacing-bottom-btn: 2px;
         width: var(--full-relative);
         margin-bottom: var(--spacing-bottom-btn);
