--- a/src/View/User/Includes/_welcome_background_slideshow.html.twig
+++ b/src/View/User/Includes/_welcome_background_slideshow.html.twig
@@ -1,4 +1,4 @@
-<div class="slider">
+<div class="slider position-relative">
     <div class="load"></div>
     <div class="content">
         <div class="principal col-12">
