change const header and blocks

--- a/src/View/Admin/course.html.twig
+++ b/src/View/Admin/course.html.twig
@@ -14,3 +14,6 @@
 		{% include "Admin/Includes/_formularyCourse.html.twig" %}
 	</main>
 {% endblock %}
+
+{% block footer %}{% endblock %}
+{% block button %}{% endblock %}
