refactor twig layout

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'User/layout_user.html.twig' %}
 {% block stylesheet %}
     <link rel="stylesheet" href="/assets/css/welcome.css">
 {% endblock %}
