--- a/src/View/Admin/course.html.twig
+++ b/src/View/Admin/course.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'Admin/layout_admin.html.twig' %}
 {% block navbar %}
 	<header>
 		{% include "Admin/Includes/_navbar.html.twig" %}
