--- a/src/View/Admin/course.html.twig
+++ b/src/View/Admin/course.html.twig
@@ -1,7 +1,7 @@
 {% extends 'Admin/layout_admin.html.twig' %}
 {% block navbar %}
     <header>
-        {% include "Admin/Includes/_navbar.html.twig" %}
+        {% include 'Admin/Includes/_navbar.html.twig' %}
     </header>
 {% endblock %}
 {% block content %}
