--- a/src/View/User/layout_user.html.twig
+++ b/src/View/User/layout_user.html.twig
@@ -1,11 +1,11 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 {% block body %}
     {% block navbar %}
         {% include 'Includes/_navbar.html.twig' %}
     {% endblock %}
     {% block content %}{% endblock %}
     {% block button %}
-        {% include "Includes/_button_to_go_up.html.twig" %}
+        {% include 'Includes/_button_to_go_up.html.twig' %}
     {% endblock %}
     {% block footer %}
         {% include 'Includes/_footer.html.twig' %}
