--- a/src/View/Admin/Includes/_formulary_course.html.twig
+++ b/src/View/Admin/Includes/_formulary_course.html.twig
@@ -1,4 +1,4 @@
-<div class="formulary-course-admin col-md-8 offset-md-2">
+<div class="formulary-course-admin col-md-8 offset-md-2 mt-5">
     {% if errors %}
         <ul class="alert alert-danger">
             {% for error in errors %}
@@ -14,13 +14,15 @@
         <div class="form-group mb-3">
             <label for="name">
                 <span class="text-danger">*</span>
-                Nom du cours</label>
+                Nom du cours
+            </label>
             <input class="form-control" type="text" name="name" id="name" placeholder="Baby Poney" required value="{{formulary.name}}" aria-required=" true">
         </div>
         <div class="form-group mb-3">
             <label for="day">
                 <span class="text-danger">*</span>
-                Jour du cours</label>
+                Jour du cours
+            </label>
             <select class="form-control" name="day" id="day" aria-required="true">
                 <option value="">Selectionner le jour de la semaine</option>
                 <option value="Lundi" {% if formulary.day == "Lundi" %} selected="selected" {% endif %}>Lundi</option>
@@ -35,19 +37,22 @@
         <div class="form-group mb-3">
             <label for="time">
                 <span class="text-danger">*</span>
-                Heure de début</label>
+                Heure de début
+            </label>
             <input class="form-control" type="time" name="time" id="time" required value="{{formulary.time}}" aria-required="true">
         </div>
         <div class="form-group mb-3">
             <label for="duration">
                 <span class="text-danger">*</span>
-                Durée (minutes)</label>
+                Durée (minutes)
+            </label>
             <input class="form-control" type="text" name="duration" id="duration" required value="{{formulary.duration}}" placeholder="maximum 120 minutes" aria-required="true">
         </div>
         <div class="form-group mb-3">
             <label for="capacity">
                 <span class="text-danger">*</span>
-                Nombre d'élèves</label>
+                Nombre d'élèves
+            </label>
             <input class="form-control" type="text" name="capacity" id="capacity" required value="{{formulary.capacity}}" placeholder="maximum 20 pesonnes" aria-required="true">
         </div>
         <button class="btn btn-primary button-formulary" type="submit">Enregistrer</button>
