--- a/src/View/Admin/course.html.twig
+++ b/src/View/Admin/course.html.twig
@@ -1,9 +1,14 @@
 {% extends 'layout.html.twig' %}
 {% block navbar %}
-	<header>
-		{% include "Admin/Includes/_navbar.html.twig" %}
-	</header>
+    <header>
+        {% include 'Admin/Includes/_navbar.html.twig' %}
+    </header>
 {% endblock %}
 {% block content %}
-	<main></main>
+    <main>
+        <h1>Administration: Cours</h1>
+        {% include 'Admin/Includes/_formulary_course.html.twig' %}
+    </main>
 {% endblock %}
+{% block footer %}{% endblock %}
+{% block button %}{% endblock %}
