change link for the new controller name

--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -6,7 +6,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="button-navbar" href="/Admin/course">Cours</a>
+				<a class="button-navbar" href="/AdminCourse/course">Cours</a>
 				<a class="button-navbar" href="">Stages</a>
 				<a class="button-navbar" href="">Clients</a>
 			</div>
