--- a/src/View/User/Includes/_inscription_form_course.html.twig
+++ b/src/View/User/Includes/_inscription_form_course.html.twig
@@ -5,26 +5,26 @@
         </div>
         <div>
             <form class="form-course" method="POST">
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <label for="firstname" class="form-label">Prénom de l'enfant :</label>
                     <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Delphine" value="" required>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <label for="lastname" class="form-label">Nom de l'enfant :</label>
                     <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Merlier" value="" required>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <label for="birthday" class="form-label">Date de naissance de l'enfant :</label>
                     <input type="date" class="form-control" id="birthday" name="birthday" placeholder="" value="" required>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <p> Votre enfant est-il déjà monté sur un poney ? :</p>
                     <select name="experience" class="form-label">
                         <option>Oui</option>
                         <option>Non</option>
                     </select>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <p> A quel cours souhaitez vous inscrire votre enfant ? :</p>
                     <select name="course" class="form-label">
                         <option></option>
@@ -33,23 +33,23 @@
                         <option></option>
                     </select>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <label for="parent-firstname" class="form-label">Prénom :</label>
                     <input type="text" class="form-control" id="parent-firstname" name="parent-firstname" placeholder="Laurie" value="" required>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <label for="parent-lastname" class="form-label">Nom :</label>
                     <input type="text" class="form-control" id="parent-lastname" name="parent-lastname" placeholder="Merlier" value="" required>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <label for="email" class="form-label">Email :</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="laurie.merlier@poney.com" value="" required>
                 </div>
-                <div class="mb-3 champ">
+                <div class="mb-3 field">
                     <label for="phone" class="form-label">Téléphone :</label>
                     <input type="text" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00" value="" required>
                 </div>
-                <button class="inscription-button">{{ buttonName|default('S\'inscrire') }} </button>
+                <button class="inscription-button">S'inscrire</button>
             </form>
         </div>
     </div>
