--- a/public/assets/css/contact_grey_block.css
+++ b/public/assets/css/contact_grey_block.css
@@ -1,4 +1,4 @@
-.haras-grey-section {
+.contact-grey-section {
     --padding: 2em;
     display: flex;
     justify-content: flex-end;
@@ -9,7 +9,7 @@
     font-family: var(--text-font);
 }
 
-.haras-grey-title {
+.contact-grey-title {
     --margin-top: 0.8em;
     --font-size: 1.2em;
     margin-top: var(--margin-top);
@@ -18,7 +18,7 @@
     text-align: center;
 }
 
-.haras-grey-text {
+.contact-grey-text {
     display: flex;
     flex-wrap: wrap;
 }
