--- a/src/View/User/contact.html.twig
+++ b/src/View/User/contact.html.twig
@@ -5,4 +5,5 @@
 {% block content %}
     {% include 'User/Includes/_contact_googlemap.html.twig' %}
     {% include 'User/Includes/_contact_white_block.html.twig' %}
+    {% include 'User/Includes/_contact_grey_block.html.twig' %}
 {% endblock %}
