--- a/src/View/Admin/layout_admin.html.twig
+++ b/src/View/Admin/layout_admin.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block stylesheet %}
+    <link rel="stylesheet" href="/assets/css/admin.css">
+{% endblock %}
 {% block body %}
     {% block navbar %}
         {% include 'Includes/_navbar.html.twig' %}
