modification of error config and text

--- a/src/View/User/Includes/_inscription_form_stages.html.twig
+++ b/src/View/User/Includes/_inscription_form_stages.html.twig
@@ -25,8 +25,8 @@
                     </select>
                 </div>
                 <div class="mb-3 field">
-                    <p> A quel cours souhaitez vous inscrire votre enfant ? :</p>
-                    <select name="course" class="form-label">
+                    <p> A quel stage souhaitez vous inscrire votre enfant ? :</p>
+                    <select name="stage" class="form-label">
                         <option></option>
                         <option></option>
                         <option></option>
