ajout de la securisation du formulaire

--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -17,9 +17,9 @@
         </p>
     </div>
     <div class="btn-insc">
-        <button class="btn-inscription" type="button">
+        <a class="btn-inscription" type="button" href="/CourseForm/inscription">
             JE M'INSCRIS !
-        </button>
+        </a>
     </div>
     <h2 class="tab-title">
         DETAILS
