--- a/src/View/User/Includes/_inscription_form_course.html.twig
+++ b/src/View/User/Includes/_inscription_form_course.html.twig
@@ -3,19 +3,37 @@
         <div class="form-title">
             <h1>Formulaire d'inscription aux cours</h1>
         </div>
+            {% if errors %}
+                <ul class="alert alert-danger">
+                    {% for error in errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% elseif errors is empty and course is null %}
+                <ul class="alert alert-success">
+                    <li>{{ thanks }}</li>
+                </ul>
+            {% endif %}
+        <p class="col-sm-3 offset-sm-9 col-6 offset-6">
+            <span class="text-danger">*</span>
+            <span class="fst-italic">champs obligatoires</span>
+        </p>
         <div>
             <form class="form-course" method="POST">
                 <div class="mb-3 field">
-                    <label for="firstname" class="form-label">Prénom de l'enfant :</label>
-                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Delphine" value="" required>
+                    <label for="firstname" class="form-label">
+                        <span class="text-danger">*</span>Prénom de l'enfant :</label>
+                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Delphine" required value="{{ course.firstname }}" aria-required="true">
                 </div>
                 <div class="mb-3 field">
-                    <label for="lastname" class="form-label">Nom de l'enfant :</label>
-                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Merlier" value="" required>
+                    <label for="lastname" class="form-label">
+                        <span class="text-danger">*</span>Nom de l'enfant :</label>
+                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Merlier" required value="{{ course.lastname }}" aria-required="true">
                 </div>
                 <div class="mb-3 field">
-                    <label for="birthday" class="form-label">Date de naissance de l'enfant :</label>
-                    <input type="date" class="form-control" id="birthday" name="birthday" placeholder="" value="" required>
+                    <label for="birthday" class="form-label">
+                        <span class="text-danger">*</span>Date de naissance de l'enfant :</label>
+                    <input type="date" class="form-control" id="birthday" name="birthday" placeholder="" required value="{{ course.birthday }}" aria-required="true">
                 </div>
                 <div class="mb-3 field">
                     <p> Votre enfant est-il déjà monté sur un poney ? :</p>
@@ -25,8 +43,9 @@
                     </select>
                 </div>
                 <div class="mb-3 field">
-                    <p> A quel cours souhaitez vous inscrire votre enfant ? :</p>
-                    <select name="course" class="form-label">
+                    <p> 
+                        <span class="text-danger">*</span> A quel cours souhaitez vous inscrire votre enfant ? :</p>
+                    <select name="course" class="form-label" aria-required="true" required>
                         <option></option>
                         <option></option>
                         <option></option>
@@ -34,20 +53,24 @@
                     </select>
                 </div>
                 <div class="mb-3 field">
-                    <label for="parent-firstname" class="form-label">Prénom :</label>
-                    <input type="text" class="form-control" id="parent-firstname" name="parent-firstname" placeholder="Laurie" value="" required>
+                    <label for="parentfirstname" class="form-label">
+                        <span class="text-danger">*</span>Prénom :</label>
+                    <input type="text" class="form-control" id="parentfirstname" name="parentfirstname" placeholder="Laurie" required value="{{ course.parentfirstname }}" aria-required="true">
                 </div>
                 <div class="mb-3 field">
-                    <label for="parent-lastname" class="form-label">Nom :</label>
-                    <input type="text" class="form-control" id="parent-lastname" name="parent-lastname" placeholder="Merlier" value="" required>
+                    <label for="parentlastname" class="form-label">
+                        <span class="text-danger">*</span>Nom :</label>
+                    <input type="text" class="form-control" id="parentlastname" name="parentlastname" placeholder="Merlier" required value="{{ course.parentlastname }}" aria-required="true">
                 </div>
                 <div class="mb-3 field">
-                    <label for="email" class="form-label">Email :</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="laurie.merlier@poney.com" value="" required>
+                    <label for="email" class="form-label">
+                        <span class="text-danger">*</span>Email :</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="laurie.merlier@poney.com" required value="{{ course.email }}" aria-required="true">
                 </div>
                 <div class="mb-3 field">
-                    <label for="phone" class="form-label">Téléphone :</label>
-                    <input type="text" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00" value="" required>
+                    <label for="phone" class="form-label">
+                        <span class="text-danger">*</span>Téléphone :</label>
+                    <input type="text" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00." required value="{{ course.phone }}" aria-required="true">
                 </div>
                 <button class="inscription-button">S'inscrire</button>
             </form>
