--- a/src/View/Admin/course.html.twig
+++ b/src/View/Admin/course.html.twig
@@ -8,6 +8,6 @@
     <main>
         <h1>Administration: Cours</h1>
         {% include 'Admin/Includes/_formulary_course.html.twig' %}
-        {% include "Admin/Includes/_show_courses.html.twig" %}
+        {% include 'Admin/Includes/_show_courses.html.twig' %}
     </main>
 {% endblock %}
