--- a/src/View/User/Includes/_inscription_form_course.html.twig
+++ b/src/View/User/Includes/_inscription_form_course.html.twig
@@ -36,16 +36,19 @@
                     <input type="date" class="form-control" id="birthday" name="birthday" placeholder="" required value="{{ course.birthday }}" aria-required="true">
                 </div>
                 <div class="mb-3 field">
-                    <p> Votre enfant est-il déjà monté sur un poney ? :</p>
-                    <select name="experience" class="form-label">
-                        <option>Oui</option>
-                        <option>Non</option>
+                    <label for="experience" class="form-label">
+                        <span class="text-danger">*</span> Votre enfant est-il déjà monté sur un poney ? :
+                    </label>
+                    <select name="experience" class="form-control">
+                        <option value="true">Oui</option>
+                        <option value="false">Non</option>
                     </select>
                 </div>
                 <div class="mb-3 field">
-                    <p> 
-                        <span class="text-danger">*</span> A quel cours souhaitez vous inscrire votre enfant ? :</p>
-                    <select name="course" class="form-label" aria-required="true" required>
+                    <label for "choice" class="form-label"> 
+                        <span class="text-danger">*</span> A quel cours souhaitez vous inscrire votre enfant ? :
+                    </label>
+                    <select name="course" class="form-control" aria-required="true" required>
                         <option></option>
                         <option></option>
                         <option></option>
