--- a/src/View/User/Includes/_haras_grey_block.html.twig
+++ b/src/View/User/Includes/_haras_grey_block.html.twig
@@ -1,5 +1,5 @@
 {% block haras_grey %}
-    <div class="haras-grey-section col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
+    <div class="haras-grey-section col-xl-8 m-0 col-sm-12">
         <div class="tab-title-text">
             <h2 class="haras-grey-title">
                 INFORMATIONS
