--- a/public/assets/css/haras.css
+++ b/public/assets/css/haras.css
@@ -1,3 +1,34 @@
 @import 'haras_googlemap.css';
 @import 'haras_grey_block.css';
 @import 'haras_white_block.css';
+
+@media (min-width:1000px) {
+    .content-page {
+        --padding-bottom: 40px;
+        --width: 95%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: var(--width);
+        padding-bottom: var(--padding-bottom);
+    }
+
+    .left-page {
+        --height: 100vh;
+        --width:100vw;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        height: var(--height);
+        width: var(--width);
+    }
+
+    .right-page {
+        --min-height: 100vh;
+        --width: 60vw;
+        display: flex;
+        min-height: var(--min-height);
+        width: var(--width);
+    }
+
+}
