--- a/src/View/User/Includes/_haras_white_block.html.twig
+++ b/src/View/User/Includes/_haras_white_block.html.twig
@@ -1,14 +1,15 @@
 {% block haras_white_block %}
-    <div class="haras-white-block-section col-xl-5 offset-xl-2 col-sm-10 offset-sm-1">
+    <div class="haras-white-block-section col-xl-8 col-md-11 offset-md-1 m-0 col-sm-12">
         <div class="white-block-title-text">
-            <p class="white-block-text">
+            <p class="white-block-text col-12">
                 Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
             </p>
         </div>
-        <div class="white-block-title-text">
+        <div class="white-block-title-text col-12">
             <p class="white-block-text">
                 Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
             </p>
+            {% include 'User/Includes/_haras_googlemap.html.twig' %}
         </div>
     </div>
 {% endblock %}
