--- a/src/View/User/haras.html.twig
+++ b/src/View/User/haras.html.twig
@@ -3,8 +3,13 @@
     <link rel='stylesheet' href='/assets/css/haras.css'>
 {% endblock %}
 {% block content %}
-    {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'ACCUEIL'} %}
-    {% include 'User/Includes/_haras_grey_block.html.twig' %}
-    {% include 'User/Includes/_haras_white_block.html.twig' %}
-    {% include 'User/Includes/_haras_googlemap.html.twig' %}
+    {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'HARAS'} %}
+    <div class='content-page'>
+        <div class='left-page'>
+            {% include 'User/Includes/_haras_white_block.html.twig' %}
+        </div>
+        <div class='right-page'>
+            {% include 'User/Includes/_haras_grey_block.html.twig' %}
+        </div>
+    </div>
 {% endblock %}
