--- a/src/View/Admin/Includes/_formulary_course.html.twig
+++ b/src/View/Admin/Includes/_formulary_course.html.twig
@@ -54,6 +54,6 @@
             </label>
             <input class="form-control" type="text" name="capacity" id="capacity" required value="{{ formulary.capacity }}" placeholder="maximum 20 pesonnes" aria-required="true">
         </div>
-        <button class="btn btn-primary button-formulary" type="submit">Enregistrer</button>
+        <button class="btn btn-primary button-formulary" type="submit">{{ button_name }}</button>
     </form>
 </div>
