--- a/src/View/Admin/Includes/_show_courses.html.twig
+++ b/src/View/Admin/Includes/_show_courses.html.twig
@@ -26,7 +26,7 @@
                                             élève(s)
                                         </p>
                                         <div class="block-buttons d-flex flex-column">
-                                            <a href="" class="btn btn-sm btn-secondary mb-1">Editer</a>
+                                            <a href="/adminCourse/edit/{{ course_day.id }}" class="btn btn-sm btn-secondary mb-1">Editer</a>
                                             <a href="" class="btn btn-sm btn-danger mb-1">Supprimer</a>
                                         </div>
                                     </div>
