--- a/src/View/User/Includes/_inscription_form_stages.html.twig
+++ b/src/View/User/Includes/_inscription_form_stages.html.twig
@@ -1,5 +1,5 @@
 {% block stages_form_inscription %}
-<div class="form col-xl-6 offset-xl-3">
+    <div class="form col-xl-6 offset-xl-3">
         <div class="form-title">
             <h1>Inscription aux Stages</h1>
         </div>
@@ -18,15 +18,15 @@
                     <input type="date" class="form-control" id="birthday" name="birthday" placeholder="" value="" required>
                 </div>
                 <div class="mb-3 field">
-                    <p> Votre enfant est-il déjà monté sur un poney ? :</p>
-                    <select name="experience" class="form-label">
-                        <option>Oui</option>
-                        <option>Non</option>
+                    <label for="experience" class="form-label"> Votre enfant est-il déjà monté sur un poney ? :</label>
+                    <select name="experience" class="form-control">
+                        <option value="true">Oui</option>
+                        <option value="false">Non</option>
                     </select>
                 </div>
                 <div class="mb-3 field">
-                    <p> A quel stage souhaitez vous inscrire votre enfant ? :</p>
-                    <select name="stage" class="form-label">
+                    <label for="stage" class="form-label"> A quel stage souhaitez vous inscrire votre enfant ? :</label>
+                    <select name="stage" class="form-control">
                         <option></option>
                         <option></option>
                         <option></option>
