--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,6 +15,10 @@
     --text-font: 'Lato', sans-serif;
 }
 
+body {
+    background-color: var(--smoke-light);
+}
+
 h1 {
     font-family: var(--title-font);
 }
