--- a/public/assets/css/contact_grey_block.css
+++ b/public/assets/css/contact_grey_block.css
@@ -1,8 +1,8 @@
 .contact-grey-section {
-    --padding: 2em;
+    --padding-section: 2em;
     display: flex;
     justify-content: flex-end;
-    padding: var(--padding);
+    padding: var(--padding-section);
     background-color: var(--grey);
     flex-direction: column;
     flex-wrap: wrap;
@@ -10,15 +10,19 @@
 }
 
 .button {
+    --padding-section: 2em;
+    --padding-button: 15px 32px;
+    --font-size-button: 16px;
+    --border-radius-button: 8px;
     background-color: var(--primary-color);
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: var(--padding-button);
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    border-radius: 8px;
+    font-size: var(--font-size-button);
+    border-radius: var(--border-radius-button);
 }
 
 .button:hover {
