Database lié au formulaire

--- a/src/View/User/Includes/_inscription_form_course.html.twig
+++ b/src/View/User/Includes/_inscription_form_course.html.twig
@@ -49,7 +49,7 @@
                         <span class="text-danger">*</span> A quel cours souhaitez vous inscrire votre enfant ? :
                     </label>
                     <select name="course" class="form-control" aria-required="true" required>
-                        <option></option>
+                        <option>o</option>
                         <option></option>
                         <option></option>
                         <option></option>
