--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -8,7 +8,7 @@
             <div class="navbar-nav">
                 <a class="button-navbar" href="/AdminCourse/course">Cours</a>
                 <a class="button-navbar" href="">Stages</a>
-                <a class="button-navbar" href="">Clients</a>
+                <a class="button-navbar" href="/AdminCourseInscription/inscription">Inscription Cours</a>
             </div>
         </div>
     </div>
