--- a/src/View/Admin/Includes/_show_courses.html.twig
+++ b/src/View/Admin/Includes/_show_courses.html.twig
@@ -25,6 +25,11 @@
                                             {{ course_day.capacity }}
                                             élève(s)
                                         </p>
+                                        <p class="card-text">Age minimum:
+                                            <br>
+                                            {{ course_day.age }}
+                                            an(s)
+                                        </p>
                                         <div class="block-buttons d-flex flex-column">
                                             <a href="/adminCourse/edit/{{ course_day.id }}" class="btn btn-sm btn-secondary mb-1">Editer</a>
                                             <a href="" class="btn btn-sm btn-danger mb-1">Supprimer</a>
