Insert required in form

--- a/src/View/User/Includes/_inscription_form_stages.html.twig
+++ b/src/View/User/Includes/_inscription_form_stages.html.twig
@@ -19,14 +19,14 @@
                 </div>
                 <div class="mb-3 field">
                     <label for="experience" class="form-label"> Votre enfant est-il déjà monté sur un poney ? :</label>
-                    <select name="experience" class="form-control">
+                    <select name="experience" class="form-control" value="" required>
                         <option value="true">Oui</option>
                         <option value="false">Non</option>
                     </select>
                 </div>
                 <div class="mb-3 field">
                     <label for="stage" class="form-label"> A quel stage souhaitez vous inscrire votre enfant ? :</label>
-                    <select name="stage" class="form-control">
+                    <select name="stage" class="form-control" value="" required>
                         <option></option>
                         <option></option>
                         <option></option>
